fix(product): validate tag id elements