@@ -5,6 +5,8 @@ import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Size;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public record ProductCreateRequest(
@@ -12,10 +14,9 @@ public record ProductCreateRequest(
         @NotBlank @Size(max = 500) String description,
         @Min(1) long priceCents,
         @NotNull ProductStatus status,
-        List<Long> tagIds
+        @Size(max = 20) List<@NotNull Long> tagIds
 ) {
     public ProductCreateRequest {
-        tagIds = tagIds == null ? List.of() : List.copyOf(tagIds);
+        tagIds = tagIds == null ? List.of() : Collections.unmodifiableList(new ArrayList<>(tagIds));
     }
 }
-
